# goit-ds-hw-03

task1/: create_bd.py  main.py  pyproject.toml
task2/: load_to_atlas.py  pyproject.toml  scrap.py
