[project]
name = "mongo-db"
version = "0.1.0"
description = ""
authors = [
    {name = "Olya Anikeieva",email = "anikeieva.or@uds.ua.energy"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymongo (>=4.12.1,<5.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
