[project]
name = "quotes-bd"
version = "0.1.0"
description = ""
authors = [
    {name = "Olya Anikeieva",email = "anikeieva.or@uds.ua.energy"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "pymongo (>=4.12.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
